Create a calculator that kind of works
Need to modify functionality, specifically so after a user enters a solution and
begins typing again, calculator full resets but retains capability to start
performing math on the solution.  Also need to add in hover and click effects for
user experience.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="calculator-window">
       <div id="calculator-body">
         <div id="display-window">
-          <div id="display-text">32</div>
+          <div id="display-text"></div>
         </div>
         <div id="body">
           <div id="entry-digits"></div>
